# second-brain

./: .gitattributes  .gitignore  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  package-lock.json  publish  publish.yaml  pyproject.toml  quartz.config.ts  quartz.layout.ts  sitemap.xml  sync.sh
.github/workflows/: ci.yml
000 Zettelkasten/2D Convolutions/: index.html
000 Zettelkasten/Ahead-of-Time (AOT) Compilation/: index.html
000 Zettelkasten/Are less inductive biases better or worse?/: index.html
000 Zettelkasten/Bit Palettization/: index.html
000 Zettelkasten/Block Expansion/: index.html
000 Zettelkasten/Convergence rate and Hessian spectra/: index.html
000 Zettelkasten/Depthwise separable convolutions/: index.html
000 Zettelkasten/Do Vision Foundation models exist?/: index.html
000 Zettelkasten/Dynamic Resource Allocation in Vision/: index.html
000 Zettelkasten/Effect of weight symmetries on training dynamics/: index.html
000 Zettelkasten/Equivariance Initialization/: index.html
000 Zettelkasten/Global Precedence Effect/: index.html
000 Zettelkasten/Grokking/: index.html
000 Zettelkasten/Group Axioms/: index.html
000 Zettelkasten/Group direct product/: index.html
000 Zettelkasten/Hardware-specific structured pruning/: index.html
000 Zettelkasten/Input-dependent convolutions/: index.html
000 Zettelkasten/K-Means-based Quantization/: index.html
000 Zettelkasten/KV Cache/: index.html
000 Zettelkasten/Linear Quantization/: index.html
content/: index.md
docs/: copy.sh  index.md
search/: search_index.json
(+1353 files in other folders)
