[tool.poetry]
name = "ai-notes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-callouts = "^1.13.2"
mkdocs = "^1.5.3"
mkdocs-simple-blog = "^0.0.9"
mkdocs-material = "^9.5.17"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-rss-plugin = "^1.12.1"
mkdocs-frontmatter-plugin = "0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
